--- a/GrandeGift_Angular2/GrandeGift_Angular2.csproj
+++ b/GrandeGift_Angular2/GrandeGift_Angular2.csproj
@@ -72,6 +72,7 @@
   <ItemGroup>
     <Content Include="app\app.component.css" />
     <Content Include="app\app.component.template.html" />
+    <Content Include="app\hamper\hamper.component.template.html" />
     <Content Include="app\personalCabinet\personalCabinet.component.template.html" />
     <Content Include="Index.html" />
     <Content Include="package.json" />
@@ -102,9 +103,13 @@
     <TypeScriptCompile Include="app\app.component.ts" />
     <TypeScriptCompile Include="app\app.module.ts" />
     <TypeScriptCompile Include="app\app.routing.ts" />
+    <TypeScriptCompile Include="app\classes\category.ts" />
+    <TypeScriptCompile Include="app\classes\hamper.ts" />
     <TypeScriptCompile Include="app\dashboard\dashboard.component.ts" />
+    <TypeScriptCompile Include="app\hamper\hamper.component.ts" />
     <TypeScriptCompile Include="app\main.ts" />
     <TypeScriptCompile Include="app\personalCabinet\personalCabinet.component.ts" />
+    <TypeScriptCompile Include="app\services\hamper.service.ts" />
     <TypeScriptCompile Include="app\usefullLinksService\link.ts" />
     <TypeScriptCompile Include="app\usefullLinksService\usefullLink.service.ts" />
   </ItemGroup>
